--- a/wab.css
+++ b/wab.css
@@ -1,3 +1,9 @@
 #div2{
 	font-size: 25px;font-family: b titr;color: darkgray
 }
+#div1{
+	color:aqua ;font-family: b titr; font-size: 50px
+}
+.div3{
+
+}
