--- a/wab.css
+++ b/wab.css
@@ -2,8 +2,5 @@
 	font-size: 25px;font-family: b titr;color: darkgray
 }
 #div1{
-	color:aqua ;font-family: b titr; font-size: 50px
-}
-.div3{
-		color: beige;
+	font-size: 50px;font-family: b titr;color: cyan
 }
